# http-interaction

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  cli.sh  configuration.yml.example  go.mod  go.sum  linux_test.sh  server.go  windows_test.ps1
.github/workflows/: codacy.yml  devskim.yml  docker-image.yml  nightly.yml  ossar.yml  rust.yml  stable.yml
config/: application.go
data/: Interaction.go
kube/: kube.yaml
src/: main.rs  rest.rs  sign_mod.rs
src/cryptography/: decode.rs  encode.rs  mod.rs
src/rest/: mod.rs  rest_manager.rs
src/routes/: mod.rs
src/routes/interaction/: README.md  interaction_create.rs  mod.rs
src/routes/websocket/: mod.rs  websocket_server.rs
src/routes/websocket/commands/: connect_client.rs  handler.rs  mod.rs
src/routes/websocket/commands/client/: README.md  mod.rs  ping_client.rs  register_client.rs  register_shard.rs  resume_gateway.rs
src/routes/websocket/commands/interaction/: interaction_return.rs  mod.rs
src/routes/websocket/messages/: utils.rs
src/routes/websocket/structures/: client.rs
src/sign/: mod.rs  sign_mod.rs
src/structures/: bot_interaction.rs  connection_state.rs  interaction.rs  mod.rs
src/structures/interactions/: interaction.rs
src/utils/: constants.rs
