[package]
name = "postinteraction"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[workspace]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.8"
flate2 = "1.0.22"
derive_more = "0.99.17"
#tokio-rustls = "0.23.2"
jwt = "0.16.0"
tokio-core = "0.1.18"
async-stream = "0.3.2"
bytes = "1.1.0"
mio = "0.8.0"
warp = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.136"
dotenv = "0.15.0"
crypto = "0.3.0"
rustc-serialize = "0.3.24"
base64 = "0.13.0"
aes-gcm = "0.9.4"
tower-http = "0.2.3"
serde_json = "1.0.68"
hex = "0.4.3"
bincode = "1.3.3"
ed25519-dalek = "1.0.1"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
futures = "0.3.21"
crossbeam = "0.8.1"