[package]
name = "httpinteraction"
description = "An API that interacts with the Discord API and receives interactions through it."
authors = ["RabbitHouseCorp"]
homepage = "https://github.com/RabbitHouseCorp"
version = "0.2.2"
edition = "2021"
rust-version = "1.59"
license = "Apache-2.0"
categories = ["discord-api", "discord-interaction", "discord-rust", "discord", "rust", "cargo", "rust-lang"]
keywords = ["api-gateway", "discord", "websocket", "discordapp", "discord-api", "rust-lang", "api-rest", "discord-interaction", "discord-interaction-url", "discord-rust"]
[dependencies]
quicli = "0.4.0"
structopt = "0.3.26"
clap = "3.1.8"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.8"
flate2 = "1.0.22"
rand = "0.7"
derive_more = "0.99.17"
jwt = "0.16.0"
tokio-core = "0.1.18"
async-stream = "0.3.2"
bytes = "1.1.0"
mio = "0.8.0"
warp = { version = "0.3.2", features = ["compression", "compression-brotli", "default"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.136"
dotenv = "0.15.0"
rustc-serialize = "0.3.24"
base64 = "0.13.0"
aes-gcm = "0.9.4"
serde_json = "1.0.68"
hex = "0.4.3"
bincode = "1.3.3"
ed25519-dalek = "1.0.1"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
futures = "0.3.21"
crossbeam = "0.8.1"
